# simple-media-encoder

./: .clang-format  .gitignore  CMakeLists.txt  CompressMyVideo.pro  EfficientMediaEncoder.pro  README.md  SimpleMediaEncoder.pro  build.nix  compressor.cpp  compressor.hpp  flake.nix  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mainwindow.ui.old  mainwindow2.ui
core/: main.cpp  mainwindow.cpp  mainwindow.hpp
core/encoder/: encoder.cpp  encoder.hpp  encoder_options.hpp  encoder_options_builder.cpp  encoder_options_builder.hpp
core/formats/: codec.hpp  container.hpp  ffmpeg_format_support_loader.cpp  ffmpeg_format_support_loader.hpp  format_support.hpp  format_support_loader.hpp  metadata.hpp  metadata_loader.cpp  metadata_loader.hpp
core/notifier/: message_box_notifier.cpp  notifier.hpp
core/settings/: ini_settings.cpp  ini_settings.hpp  serializer.cpp  serializer.hpp  settings.hpp  settings_factory.cpp  settings_factory.hpp
core/utils/: platform_info.cpp  platform_info.hpp  warnings.cpp  warnings.hpp
include/: compressor.hpp  either.hpp  encoder.hpp  ini_settings.hpp  mainwindow.hpp  message_box_notifier.hpp  metadata.hpp  notifier.hpp  serializer.hpp  settings.hpp  settings_factory.hpp  warnings.hpp
include/encoder/: encoder.hpp  encoder_options.hpp  encoder_options_builder.hpp
include/formats/: codec.hpp  container.hpp  ffmpeg_format_support_loader.hpp  format_support.hpp  format_support_loader.hpp  metadata.hpp  metadata_loader.hpp
include/notifier/: message.hpp  message_box_notifier.hpp  notifier.hpp
include/settings/: settings_factory.hpp
src/: compressor.cpp  encoder.cpp  ini_settings.cpp  inisettings.cpp  main.cpp  mainwindow.cpp  message_box_notifier.cpp  metadata.cpp  notifier.cpp  settings.cpp  settings_factory.cpp  warnings.cpp
src/encoder/: encoder.cpp  encoder_options_builder.cpp
src/formats/: ffmpeg_format_support_loader.cpp  metadata.cpp  metadata_loader.cpp
src/notifier/: message_box_notifier.cpp
src/settings/: ini_settings.cpp  serializer.cpp  settings_factory.cpp
src/utils/: platform_info.cpp  warnings.cpp
ui/: mainwindow.ui  overlay_widget.cpp  overlay_widget.hpp
